# RDASApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  checkout_submodules_branches.sh
.github/: choose-pr-template.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  general-issue.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_pr.md  feature_pr.md  sync_submodule_pr.md
.github/workflows/: norms.yaml  unittests.yaml
bundle/: CMakeLists.txt  fix  fv3-jedi-data  ioda-data  ufo-data
bundle/mpas-jedi-data/testinput_tier_1/: obs
bundle/mpas-jedi-data/testinput_tier_1/384km/init/: x1.4002.init.2018-04-15_00.00.00.nc
bundle/mpas-jedi-data/testinput_tier_1/480km/bg/: ensemble  restart.2018-04-14_21.00.00.nc  restart.2018-04-15_00.00.00.nc  restart.2018-04-15_03.00.00.nc
bundle/mpas-jedi-data/testinput_tier_1/480km_2stream/: mpasout.2018-04-15_00.00.00.nc  static.nc  x1.2562.grid.nc  x1.2562.init.2018-04-14_18.00.00.nc
bundle/rrfs-test-data/: rrfs-data_fv3jedi_2022052619  rrfs-data_fv3jedi_2024052700  rrfs-data_mpasjedi_2024052700
bundle/test-data-release/: crtm
ci/: driver.sh  hera.sh  orion.sh  run_ci.sh  stable_driver.sh
docs/: build.md  build_and_test.md
expr/mpasjedi_2024052700/: link_expr.sh  mpasjedi_increment_singleob.py  run_bump.sh  run_mpasjedi.sh
fix/: .agent  crtm  jcsda  rrfs-test-data
fix/B_static/: L55_20241204
fix/bumploc/: atl12km-401km11levels  conus12km-300km_0p3logp  conus12km-401km11levels  conus12km-401km11levels_updatesaber  conus12km-401km3levels  conus12km-401km_1p095logp
fix/crtm/: 2.3.0  2.4.1_skylab_4.0  fix_REL-3.1.1.2
fix/expr_data/: atl_2024052700  mpas_2024052700  rrfs-data_fv3jedi_2022052619
fix/graphinfo/: atl12km.graph.info  atl12km.graph.info.part.120  atl12km.graph.info.part.1200  atl12km.graph.info.part.160  atl12km.graph.info.part.20  atl12km.graph.info.part.200  atl12km.graph.info.part.240  atl12km.graph.info.part.280  atl12km.graph.info.part.300  atl12km.graph.info.part.360  atl12km.graph.info.part.40  atl12km.graph.info.part.400  atl12km.graph.info.part.480  atl12km.graph.info.part.540  atl12km.graph.info.part.60  atl12km.graph.info.part.600  atl12km.graph.info.part.720  atl12km.graph.info.part.80  atl12km.graph.info.part.800  atl12km.graph.info.part.960  conus12km_mpas.graph.info  conus12km_mpas.graph.info.part.160
fix/jcsda/: fv3-jedi-data  ioda-data  mpas-jedi-data  ufo-data
fix/physics/: CAM_ABS_DATA.DBL  CAM_AEROPT_DATA.DBL  GENPARM.TBL  LANDUSE.TBL  OZONE_DAT.TBL  OZONE_LAT.TBL  OZONE_PLEV.TBL  RRTMG_LW_DATA.DBL  RRTMG_SW_DATA.DBL  SOILPARM.TBL  VEGPARM.TBL
fix/rrfs-test-data/: rrfs-data_fv3jedi_2022052619  rrfs-data_mpasjedi_2022052619
mains/: CMakeLists.txt  rdas.cc  rdas_fv3jedi.cc  rdas_mpasjedi.cc
modulefiles/EVA/: gaeaC5.lua  gaeaC6.lua  jet.lua
modulefiles/RDAS/: gaea.intel.lua  gaeaC5.intel.lua  hera.intel.lua  hera.lua  hercules.intel.lua  jet.intel.lua  orion.intel.lua  orion.lua
rrfs-test/: CMakeLists.txt  dict_funcs.cmake  funcs.cmake
rrfs-test/IODA/: offline_domain_check.py  offline_domain_check_satrad.py  offline_domaincheck.py
rrfs-test/gsi_fix/: anavinfo  convinfo  gsiparm.anl
rrfs-test/mpasjedi_2024052700/: link_expr.sh  run_bump.sh  run_jedi.sh
rrfs-test/obs/: msonet_singleob_airTemperature.nc4
rrfs-test/scripts/: link_fv3jedi_expr.sh  link_mpasjedi_expr.sh  setup_experiment.sh  setup_experiment.sh.new  setup_gsi_parallel.sh
rrfs-test/testinput/: msonet_airTemperature.yaml  msonet_singleob_airTemperature.yaml  msonet_singleob_airTemperature_fv3jedi.yaml  msonet_singleob_airTemperature_mpasjedi.yaml  rrfs_bufr2ioda_msonet.yaml  rrfs_fv3jedi_2024052700_Ens3Dvar.yaml  rrfs_fv3jedi_2024052700_bumploc.yaml  rrfs_fv3jedi_2024052700_getkf_observer.yaml  rrfs_fv3jedi_2024052700_getkf_solver.yaml  rrfs_fv3jedi_2024052700_hyb.yaml  rrfs_fv3jedi_2024052700_letkf.yaml  rrfs_fv3jedi_bumploc_2022052619.yaml  rrfs_fv3jedi_hyb_2022052619.yaml  rrfs_fv3jedi_letkf_2022052619.yaml  rrfs_mpasjedi_2022052619_Ens3Dvar.yaml  rrfs_mpasjedi_2022052619_atms_npp_qc.yaml  rrfs_mpasjedi_2022052619_atms_npp_qc_bc.yaml  rrfs_mpasjedi_2022052619_letkf.yaml  rrfs_mpasjedi_2024052700_Ens3Dvar.yaml  rrfs_mpasjedi_2024052700_bumploc.yaml  rrfs_mpasjedi_2024052700_getkf.yaml  rrfs_mpasjedi_2024052700_getkf_observer.yaml  rrfs_mpasjedi_2024052700_getkf_solver.yaml  rrfs_mpasjedi_2024052700_letkf.yaml  rrfs_mpasjedi_20240527_letkf.yaml  rrfs_mpasjedi_bumploc_2022052619.yaml  rrfs_mpasjedi_en3dvar_ZTD.yaml  streams.atmosphere
rrfs-test/testinput_expr/: namelist.atmosphere  rrfs_fv3jedi_hyb_2022052619.yaml  rrfs_fv3jedi_letkf_2022052619.yaml  rrfs_mpasjedi_2024052700_Ens3Dvar.yaml  rrfs_mpasjedi_2024052700_Hybrid.yaml  rrfs_mpasjedi_2024052700_bumploc.yaml  rrfs_mpasjedi_2024052700_getkf.yaml  rrfs_mpasjedi_2024052700_getkf_observer.yaml  rrfs_mpasjedi_2024052700_getkf_solver.yaml  rrfs_mpasjedi_2024052700_letkf.yaml  streams.atmosphere
rrfs-test/testoutput/: rrfs-fv3jedi-ens3dvar.ref  rrfs-fv3jedi-getkf-observer.ref  rrfs-fv3jedi-getkf-solver.ref  rrfs-fv3jedi-hyb.ref  rrfs-fv3jedi-letkf.ref  rrfs-mpasjedi-bump.ref  rrfs-mpasjedi-ens3dvar.ref  rrfs-mpasjedi-getkf-observer.ref  rrfs-mpasjedi-getkf-solver.out  rrfs-mpasjedi-getkf-solver.ref  rrfs-mpasjedi-getkf.ref  rrfs-mpasjedi-letkf.ref
rrfs-test/ush/: colormap.py  envpy  fv3gsi_increment_fulldom.py  fv3jedi-gsi-hofx-validation.py  fv3jedi-increment.py  fv3jedi_gsi_hofx_validation.py  fv3jedi_gsi_increment_singleob.py  fv3jedi_gsi_validation.py  fv3jedi_increment_fulldom.py  fv3jedi_increment_singleob.py  iodaconv_comp_rrfs.sh  jedi-increment.py  mpasjedi-increment.py  mpasjedi_increment_fulldom.py  mpasjedi_increment_singleob.py  mpasjedi_spread.py  print_ctest_runtime.py  update_ctest_inputs.sh
rrfs-test/validated_yamls/: gen_yaml.sh  gen_yaml_ctest.sh  gen_yaml_fv3jedi_ctest.sh  gen_yaml_mpasjedi_ctest.sh  msonet_airTemperature_obtype188.yaml  (+3 more)
sorc/: fv3-interface.cmake
test/: CMakeLists.txt  test_gen_3dvar_yaml.py
ush/: detect_machine.sh  init.sh  load_eva.sh  load_rdas.sh  module-setup.sh  run_rrfs_tests.sh
(+135 files in other folders)
